--- a/屏幕适配.md
+++ b/屏幕适配.md
@@ -12,3 +12,8 @@ rem: 参照的是html根元素的字号(C3新增)
 ###屏幕默认宽度980像素
 
 ###后缀只是告诉浏览器以哪种方式打开这个文件
+
+##css引入方式
+###html中,直接用link引less文件(改rel="stylesheet/less")
+###less提供了一个@import可以引入外部less(写在less中)
+###css提供了一种方式,@import引入其他css(写在style里的)
