--- a/屏幕适配.md
+++ b/屏幕适配.md
@@ -17,3 +17,26 @@ rem: 参照的是html根元素的字号(C3新增)
 ###html中,直接用link引less文件(改rel="stylesheet/less")
 ###less提供了一个@import可以引入外部less(写在less中)
 ###css提供了一种方式,@import引入其他css(写在style里的)
+
+#如何生成字体图标
+1. 让UI协助导出svg图片
+2. 借助第三方软件或工具生成字体图标
+
+##混合less写法
+.mix([形参]: [默认值]);  定义之后直接引用
+
+###排除选择  .box:not(要排除的选择器){};
+
+
+
+
+
+
+
+
+
+
+
+
+
+
