--- a/就业指导.md
+++ b/就业指导.md
@@ -6,4 +6,49 @@
 
 4. 微信公众号
 
-5. 活动页
+5. 活动页(\(^o^)/~)
+
+
+前端包管理: npm
+前端构建: gulp
+
+** 工作中用到的问题 (除兼容性问题,h5 c3适配问题) **
+
+
+#简历
+
+1. 简约而不简单
+
+2. 内容为王(项目)
+
+3. 用心写
+
+4. 简历分为线上简历和附件简历
+
+
+###简历命名规范
+陆文秀-Web前端-2年工作经验 157-3592-1660
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
