--- a/面向对象第5天.md
+++ b/面向对象第5天.md
@@ -1,20 +1,20 @@
-\#作用域
+#作用域
 
-\*变量起作用的范围
+* 变量起作用的范围
 
-\#\#块级作用域\(js中没有\)
+##块级作用域\(js中没有\)
 
-\*使用代码块限定的作用域就是块级作用域.
+* 使用代码块限定的作用域就是块级作用域.
 
-\#\#词法作用域\(js中\)
+##词法作用域\(js中\)
 
-\*代码写好的那一刻,变量的作用域就已经确定了\(静态\)
+* 代码写好的那一刻,变量的作用域就已经确定了\(静态\)
 
-\*和词法作用域相对的是动态作用域,js中没有 \(动态\)
+* 和词法作用域相对的是动态作用域,js中没有 \(动态\)
 
-\*在js中唯一能产生作用域的东西就是  函数!
+* 在js中唯一能产生作用域的东西就是  函数!
 
-\#\#规则
+##规则
 
 ```
 1.函数允许访问函数外的数据
@@ -23,11 +23,11 @@
 4.作用域规则首先遵循变量声明提升
 ```
 
-\#\#声明提升
+##声明提升
 
-\*只提升带var的变量和function开头的函数
+* 只提升带var的变量和function开头的函数
 
-\#\#\#js代码执行两步骤
+###js代码执行两步骤
 
 1.预解析: 带var的变量名称和函数声明提升
                \*注意:1. 变量值不会跟随提升 ;
@@ -43,25 +43,25 @@
 
 2.执行:
 
-\#作用域链
+#作用域链
 
-\*多个函数嵌套,就会形成一个链式访问结构
+* 多个函数嵌套,就会形成一个链式访问结构
 
-\#闭包
+#闭包
 
-\*一个具有封闭的对外不公开的包裹结构或空间
+* 一个具有封闭的对外不公开的包裹结构或空间
 
-\*js中的闭包就是函数
+* js中的闭包就是函数
 
-\#\#闭包的原理就是作用域访问原则
+##闭包的原理就是作用域访问原则
 
-\#\#闭包基本模式
+##闭包基本模式
 
-\*在外部函数中,创建一个内部函数并返回这个内部函数,在最外边调用那个内部函数时,传参就可以修改外部函数中的变量.
+* 在外部函数中,创建一个内部函数并返回这个内部函数,在最外边调用那个内部函数时,传参就可以修改外部函数中的变量.
 
-\#\#闭包的作用
+##闭包的作用
 
-\*1.基本: 可以通过闭包返回的函数或方法,来修改函数内的数据
+* 1.基本: 可以通过闭包返回的函数或方法,来修改函数内的数据
 
-\*2.创建一个私有的空间,保护数据.外部想要访问数据,只能通过闭包提供的方法,这样在提供的方法中就可以设置一些校验措施,让数据变得更安全\(闭包提供的方法中,可以设置条件\).
+* 2.创建一个私有的空间,保护数据.外部想要访问数据,只能通过闭包提供的方法,这样在提供的方法中就可以设置一些校验措施,让数据变得更安全\(闭包提供的方法中,可以设置条件\).
 
