--- a/面向对象第6天.md
+++ b/面向对象第6天.md
@@ -80,35 +80,35 @@
 
 \*this: 指向new创建出来的对象
 
-\#\#上下文模式
+##上下文模式
 
-\*this--&gt;指定的是谁就是谁
+* this--&gt;指定的是谁就是谁
 
-\*js中的上下文: context:执行环境的意思\(this\)
+* js中的上下文: context:执行环境的意思\(this\)
 
-\*在上下文调用模式中,修改this,可以修改函数的调用方法
+* 在上下文调用模式中,修改this,可以修改函数的调用方法
 
-\#\#\#apply
+###apply
 
-\*函数.apply\(对象,\[函数需要的参数列表,是一个数组\]\)
+* 函数.apply(对象,\[函数需要的参数列表,是一个数组\]\)
 
-\*eg: sayHello.apply\(obj,\[1,2,3\]\);
+* eg: sayHello.apply\(obj,\[1,2,3\]\);
 
-\*使用数组进行传参,但是在函数调用的时候,会把数组一一拆解成单个的形参.
+* 使用数组进行传参,但是在函数调用的时候,会把数组一一拆解成单个的形参.
 
-\#\#\#call
+###call
 
-\*函数.call\(对象,\[arg1\], \[arg2\],  \[arg3\]...\)
+* 函数.call\(对象,\[arg1\], \[arg2\],  \[arg3\]...\)
 
-\*eg: sayHello.apply\(obj,1,2,3\);
+* eg: sayHello.apply\(obj,1,2,3\);
 
-\#\#\#区别
+###区别
 
-\*第一个参数都是把this修改为当前对象的
+* apply用于函数形参不确定的情况下;call用于形参确定的情况下.
 
-\*apply用于函数形参不确定的情况下;call用于形参确定的情况下.
+* 第一个参数都是把this修改为当前对象的
 
-\*apply和call方法第一个传递null\/undefined\/不传参 的时候,都表示为函数调用模式,也就是将this指向window.
+* apply和call方法第一个传递null\/undefined\/不传参 的时候,都表示为函数调用模式,也就是将this指向window.
 
-\*call方法和apply方法都是定义在Function.prototype中的.
+* call方法和apply方法都是定义在Function.prototype中的.
 
