--- a/屏幕适配.md
+++ b/屏幕适配.md
@@ -7,7 +7,7 @@ rem: 参照的是html根元素的字号(C3新增)
 使用关键字only and not  链接媒体类型和媒体特性
 ###使用方法
 1. link方法  (media当做属性使用,相当于操作整个css文件)
-2. @media方法  (卸载style属性中)
+2. @media方法  (写在style属性中)
 ###device-width  检测设备宽度
 ###屏幕默认宽度980像素
 
