--- a/跨域问题.md
+++ b/跨域问题.md
@@ -13,3 +13,47 @@
 1. 数据接口,动静分离
 2. 后台无法开发接口
 3. 接口开了,但是用不了几天就废了
+
+
+##跨域
+1. jsonp的跨域请求数据
+2. iframe嵌套另一个页面
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
