--- a/屏幕适配.md
+++ b/屏幕适配.md
@@ -1,10 +1,21 @@
 ###浏览器默认字体大小16px,最小显示12px;
+
 ##相对长度单位
-em: 参照的是当前元素的字号
+em: 参照的是当前元素的字号 (10/16=62.5%)
 rem: 参照的是html根元素的字号(C3新增)
+
+##常见屏幕尺寸
+> 320: iphone4/iphone5, galaxy: 360, 375: iphone6, 414: iphone6 plus
+
+##媒体查询,适配方案
+
+** UI稿件640/750 **
+
+
 
 ##媒体查询
 使用关键字only and not  链接媒体类型和媒体特性
+
 ###使用方法
 1. link方法  (media当做属性使用,相当于操作整个css文件)
 2. @media方法  (写在style属性中)
