--- a/屏幕适配.md
+++ b/屏幕适配.md
@@ -10,6 +10,46 @@ rem: 参照的是html根元素的字号(C3新增)
 ##媒体查询,适配方案
 
 ** UI稿件640/750 **
+> 640px/20份 = 32px; (16px 占0.5份)
+
+>为了方便计算,不同屏幕下都分成20份
+
+       @media only screen and (width: 320px) {
+			html {
+				font-size: 16px;//每份的大小
+			}
+		}
+
+		@media only screen and (width: 360px) {
+			html {
+				font-size: 18px;
+			}
+		}
+
+		@media only screen and (width: 375px) {
+			html {
+				font-size: 18.75px;
+			}
+		}
+
+		@media only screen and (width: 400px) {
+			html {
+				font-size: 20px;
+			}
+		}
+
+		@media only screen and (width: 412px) {
+			html {
+				font-size: 20.6px;
+			}
+		}
+
+		@media only screen and (width: 414px) {
+			html {
+				font-size: 20.7px;
+			}
+		}
+
 
 
 
