--- a/屏幕适配.md
+++ b/屏幕适配.md
@@ -14,9 +14,10 @@ rem: 参照的是html根元素的字号(C3新增)
 
 >为了方便计算,不同屏幕下都分成20份
 
+```
        @media only screen and (width: 320px) {
 			html {
-				font-size: 16px;//每份的大小
+				font-size: 16px; // 每份的大小
 			}
 		}
 
@@ -49,7 +50,7 @@ rem: 参照的是html根元素的字号(C3新增)
 				font-size: 20.7px;
 			}
 		}
-
+```
 
 
 
@@ -60,6 +61,26 @@ rem: 参照的是html根元素的字号(C3新增)
 1. link方法  (media当做属性使用,相当于操作整个css文件)
 2. @media方法  (写在style属性中)
 ###device-width  检测设备宽度
+
+```
+//完全等于宽/高度时，才会变成蓝色
+@media only screen and (width: 320px) and (height: 568px) {
+			body {
+				background-color: blue;
+			}
+		}
+```
+
+```
+//小于等于宽/高度时，才会变成蓝色
+@media only screen and (max-height: 400px) {
+			body {
+				background-color: blue;
+			}
+		}
+```
+
+
 ###屏幕默认宽度980像素
 
 ###后缀只是告诉浏览器以哪种方式打开这个文件
