--- a/屏幕适配.md
+++ b/屏幕适配.md
@@ -9,7 +9,7 @@ rem: 参照的是html根元素的字号(C3新增)
 
 ##媒体查询,适配方案
 
-** UI稿件640/750 **
+** UI稿件640px/750px **
 > 640px/20份 = 32px; (16px 占0.5份)
 
 >为了方便计算,不同屏幕下都分成20份
@@ -17,7 +17,7 @@ rem: 参照的是html根元素的字号(C3新增)
 ```
        @media only screen and (width: 320px) {
 			html {
-				font-size: 16px; // 每份的大小
+				font-size: 16px; // 每份的大小,如果原UI图给的是640px的,并且测的距离大小假如是16px,那么占其原来的0.5份,则在此适配屏幕下的距离大小就为: 0.5*16px=8px; 如果当前的单位是5rem,那么实际大小距离为: 16*5=80px;
 			}
 		}
 
@@ -79,6 +79,18 @@ rem: 参照的是html根元素的字号(C3新增)
 			}
 		}
 ```
+
+```
+//当视口中设置的width/height为device-height的值是,就会起作用
+@media only screen and (device-height: 568px) {
+			body {
+				background-color: blue;
+			}
+		}
+```
+
+> orientation: portrait | landscape 
+		/* 横/坚屏 */
 
 
 ###屏幕默认宽度980像素
