--- a/屏幕适配.md
+++ b/屏幕适配.md
@@ -2,7 +2,22 @@
 
 ##相对长度单位
 em: 参照的是当前元素的字号 (10/16=62.5%)
-rem: 参照的是html根元素的字号(C3新增)
+rem: 参照的是html根元素的字号(C3新增,IE9以上)
+```
+html {
+    font-size: 62.5%;
+    /*10 ÷ 16 × 100% = 62.5%*/
+}
+body {
+    font-size: 1.4rem;
+    /*1.4 × 10px = 14px */
+}
+h1 {
+    font-size: 2.4rem;
+    /*2.4 × 10px = 24px*/
+}
+//在根元素中设置了一个百分比形式的基本字体大小,这是因为浏览器默认字号是16px,用百分比定义了一个10px,只是为了下边使用rem单位的时候好计算;
+```
 
 ##常见屏幕尺寸
 > 320: iphone4/iphone5, galaxy: 360, 375: iphone6, 414: iphone6 plus
