--- a/屏幕适配.md
+++ b/屏幕适配.md
@@ -1,8 +1,8 @@
 ###浏览器默认字体大小16px,最小显示12px;
 
 ##相对长度单位
-em: 参照的是当前元素的字号 (10/16=62.5%)
-rem: 参照的是html根元素的字号(C3新增,IE9以上)
+1. em: 参照的是当前元素的字号 (10/16=62.5%)
+2. rem: 参照的是html根元素的字号(C3新增,IE9以上),主要用在移动端
 ```
 html {
     font-size: 62.5%;
@@ -18,6 +18,10 @@ h1 {
 }
 //在根元素中设置了一个百分比形式的基本字体大小,这是因为浏览器默认字号是16px,用百分比定义了一个10px,只是为了下边使用rem单位的时候好计算;
 ```
+rem 的好处: 
+  - 可以等比例适配所有屏幕
+  + 字体大小等可以等比例缩放,不会出现当浏览器改变页面大小的时候,字体不会跟随变化的尴尬问题
+  * rem统一相对于根元素,避免了计算麻烦的问题
 
 ##常见屏幕尺寸
 > 320: iphone4/iphone5, galaxy: 360, 375: iphone6, 414: iphone6 plus
