--- a/屏幕适配.md
+++ b/屏幕适配.md
@@ -24,7 +24,7 @@ rem 的好处:
   * rem统一相对于根元素,避免了计算麻烦的问题
 
 ##常见屏幕尺寸
-> 320: iphone4/iphone5, galaxy: 360, 375: iphone6, 414: iphone6 plus
+> 320: iphone4/iphone5, 360: galaxy, 375: iphone6, 414: iphone6 plus
 
 ##媒体查询,适配方案
 
