--- a/屏幕适配.md
+++ b/屏幕适配.md
@@ -1,7 +1,7 @@
 ###浏览器默认字体大小16px,最小显示12px;
 
 ##相对长度单位
-1. em: 参照的是当前元素的字号 (10/16=62.5%)
+1. em: 参照的是当前元素的字号 
 2. rem: 参照的是html根元素的字号(C3新增,IE9以上),主要用在移动端
 ```
 html {
@@ -119,6 +119,25 @@ rem 的好处:
 ##css引入方式
 ###html中,直接用link引less文件(改rel="stylesheet/less")
 ###less提供了一个@import可以引入外部less(写在less中)
+> less中除了可以@定义常量外,也可以定义函数进行传参
+
+```
+.border(@r: 8px) {
+	-webkit-border-radius: @r;
+	-o-border-radius: @r;
+	-moz-border-radius: @r;
+	border-radius: @r;
+}
+
+header {
+	.border(5px);
+}
+
+section {
+	.border();
+}
+```
+
 ###css提供了一种方式,@import引入其他css(写在style里的)
 
 #如何生成字体图标
