--- a/屏幕适配.md
+++ b/屏幕适配.md
@@ -118,8 +118,11 @@ rem 的好处:
 
 ##css引入方式
 ###html中,直接用link引less文件(改rel="stylesheet/less")
-###less提供了一个@import可以引入外部less(写在less中)
-> less中除了可以@定义常量外,也可以定义函数进行传参
+###less: css预处理器的一种<===>sass
+** 提供了一个@import可以引入外部less(写在less中) **
+> less中除了可以@定义常量(可参加运算)外,也可以定义函数进行传参
+好处: 结构清晰,便于维护,完全兼容css代码;
+缺点: 需要编译
 
 ```
 .border(@r: 8px) {
