--- a/简历遇到的问题.md
+++ b/简历遇到的问题.md
@@ -51,7 +51,7 @@
 reactjs,github,抓包工具,web app
 
 
-####position定位可以设置位移,c3中的transition也可以设置位移,但是transition是由浏览器内核直接渲染的.而position是先操作dom,然后在设置css样式,即先加载元素,计算位移之后在渲染,会减慢3-5倍的速度.
+** position定位可以设置位移,c3中的transition也可以设置位移,但是transition是由浏览器内核直接渲染的.而position是先操作dom,然后在设置css样式,即先加载元素,计算位移之后在渲染,会减慢3-5倍的速度. **
 
 
 
