--- a/简历遇到的问题.md
+++ b/简历遇到的问题.md
@@ -38,7 +38,8 @@
  > zepto与jQuery的区别: zepto中没有为原型定义extend方法,而jQuery有; zepto的each
 方法只能遍历数组,不能遍历json; zepto的width()和height()由盒模型(box-sizing)决定,
 用.width()返回赋值的width值,用.css('width')返回的是包含padding和border的值,而jquery
-会忽略盒模型,始终返回内容的宽高(不包括padding和border)
+会忽略盒模型,始终返回内容的宽高(不包括padding和border);
+zepto会阻止事件冒泡
 
 17. table布局早就淘汰了,更不可能会出现在微信公众号中
 18. canvas做统计用户数量的柱状图(高是根据用户数量和底成比例画的图,用户使用数量数据是
