--- a/就业指导.md
+++ b/就业指导.md
@@ -6,61 +6,47 @@
 
 4. 微信公众号
 
-5. 活动页(\(^o^)/~)
+5. 活动页\(\(^o^\)/~\)
 
-
-前端包管理: npm
+前端包管理: npm  
 前端构建: gulp
 
-** 工作中用到的问题 (除兼容性问题,h5 c3适配问题) **
+** 工作中用到的问题 \(除兼容性问题,h5 c3适配问题\) **
 
-
-#简历
+# 简历
 
 1. 简约而不简单
 
-2. 内容为王(项目)
+2. 内容为王\(项目\)
 
 3. 用心写
 
 4. 简历分为线上简历和附件简历
 
+### 简历命名规范
 
-###简历命名规范
 陆文秀-Web前端-2年工作经验 157-3592-1660
 
 展现熟悉的,突出最熟悉的
 
-
-##对自己技术有什么规划?
+## 对自己技术有什么规划?
 
 1. 研究新的流行框架
-2. 往后台发展(数据库和服务器相关知识)
+2. 往后台发展\(数据库和服务器相关知识\)
 
-##为什么没有社保
-###公司为了合理避税,折现
-###公司为了转型,没有签劳动合同,都折现了
-###公司为了避税,上的是商业保险
+## 为什么没有社保
 
-###还有什么要问的?
-    用的什么技术, 开发流程, 团队有几个人, 来之后主要负责什么
+### 公司为了合理避税,折现
 
+### 公司为了转型,没有签劳动合同,都折现了
 
+### 公司为了避税,上的是商业保险
 
+### 还有什么要问的?
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+```
+用的什么技术, 开发流程, 团队有几个人, 来之后主要负责什么
+```
 
 
 
