--- a/就业指导.md
+++ b/就业指导.md
@@ -1,2 +1,14 @@
+### gitbook editor是本地编辑器
+
+### gitbook.com是线上编辑器\(用GitHub账号登录\)
+
+### github可以托管利用gitbook editor或者是gitbook.com编写的电子书
+
+> github上的master分支用来保存文档笔记源码\(md\)
+>
+> gh-pages分支\(只能叫这个名字\)用来保存利用生成的静态文件\(html文件/gitbook样式文件\)
+>
+> 最终线上预览自己的电子书 \[网址\]\(https://luggege.github.io/book\)
+
 
 
