--- a/就业指导.md
+++ b/就业指导.md
@@ -1,7 +1,7 @@
 ### gitbook editor是本地编辑器
 
-> 关联GitHub方法:  Book==&gt;Repository Settings==&gt;填入GitHub地址\(https://github.com/luggege/book.git\)
-
+> 关联GitHub方法:  Book==&gt;Repository Settings==&gt;填入GitHub地址\([https://github.com/luggege/book.git\](https://github.com/luggege/book.git\)\)
+>
 > 本地代码同步到GitHub上==&gt;save==&gt;Publish&Sync
 
 ### gitbook.com是线上编辑器\(用GitHub账号登录,关联GitHub\)
@@ -12,9 +12,9 @@
 >
 > gh-pages分支\(只能叫这个名字\)用来保存利用生成\(\_book文件夹中\)的静态文件\(html文件/gitbook样式文件\)
 
-### 最终利用GitHub线上预览自己的电子书 \[网址\]\([https://luggege.github.io/book](https://luggege.github.io/book\)\)
+### 最终利用GitHub线上预览自己的电子书 \[网址\]\([https://luggege.github.io/book](https://luggege.github.io/book%29\)
 
-### 利用gitbook.com线上编辑的电子书,在线预览\[地址\]\(https://luggege.gitbooks.io/book\)
+### 利用gitbook.com线上编辑的电子书,在线预览\[地址\]\([https://luggege.gitbooks.io/book](https://luggege.gitbooks.io/book\)\)
 
 ## 如何发布到GitHub
 
@@ -26,7 +26,7 @@
 具体操作步骤:
 
 1. 登录GitHub创建一个新仓库,命名为book
-2. 克隆远程仓库到本地 git clone https://github.com/luggege/book.git
+2. 克隆远程仓库到本地 git clone [https://github.com/luggege/book.git](https://github.com/luggege/book.git)
 3. 创建一个新分支：`git checkout -b gh-pages`，注意，分支名必须为 gh-pages
 
 4. 将分支 push 到仓库：`git push -u origin gh-pages`
@@ -37,11 +37,11 @@
 
 `http://USERNAME.github.io/book`
 
-   6.  cd .. 退出一层克隆远程仓库的gh-pages分支并保存为book_build文件夹:   git clone -b gh-pages https://github.com/luggege/book.git book\_build_
+1. cd .. 退出一层克隆远程仓库的gh-pages分支并保存为book_build文件夹:   git clone -b gh-pages _[https://github.com/luggege/book.git](https://github.com/luggege/book.git)_ book\_build_
 
-   7. 然后从本地编辑器自动生成的源目录中找到_book文件夹\(保存的html静态文件\),复制其中的静态文件和样式文件\(gitbook\)到gitbook\_build文件中_
+2. 然后从本地编辑器自动生成的源目录中找到_book文件夹\(保存的html静态文件\),复制其中的静态文件和样式文件\(gitbook\)到gitbook\_build文件中_
 
-   8. 将静态文件push到远程仓库book的gh-pages分钟上: 命令如下:
+3. 将静态文件push到远程仓库book的gh-pages分钟上: 命令如下:
 
 > git add .
 >
@@ -49,9 +49,5 @@
 >
 > git push origin gh-pages
 
-
-
 之后，每次修改之后，都可以将生成的静态文件 copy 到 book\_build 目录，再 push 到远程仓库 book 的 gh-pages 分支。
-
-
 
