--- a/就业指导.md
+++ b/就业指导.md
@@ -1,6 +1,6 @@
 ### gitbook editor是本地编辑器
 
-> 关联GitHub方法:  Book==&gt;Repository Settings==&gt;填入GitHub地址\([https://github.com/luggege/book.git\](https://github.com/luggege/book.git\)\)
+> 关联GitHub方法:  Book==&gt;Repository Settings==&gt;填入GitHub地址\([https://github.com/luggege/book.git\](https://github.com/luggege/book.git%29\)
 >
 > 本地代码同步到GitHub上==&gt;save==&gt;Publish&Sync
 
@@ -14,7 +14,7 @@
 
 ### 最终利用GitHub线上预览自己的电子书 \[网址\]\([https://luggege.github.io/book](https://luggege.github.io/book%29\)
 
-### 利用gitbook.com线上编辑的电子书,在线预览\[地址\]\([https://luggege.gitbooks.io/book](https://luggege.gitbooks.io/book\)\)
+### 利用gitbook.com线上编辑的电子书,在线预览\[地址\]\([https://luggege.gitbooks.io/book](https://luggege.gitbooks.io/book%29\)
 
 ## 如何发布到GitHub
 
@@ -50,4 +50,6 @@
 > git push origin gh-pages
 
 之后，每次修改之后，都可以将生成的静态文件 copy 到 book\_build 目录，再 push 到远程仓库 book 的 gh-pages 分支。
+
+参考博客:  \(http://www.jianshu.com/p/4731abc562e7\)
 
