--- a/就业指导.md
+++ b/就业指导.md
@@ -26,7 +26,7 @@
 具体操作步骤:
 
 1. 登录GitHub创建一个新仓库,命名为book
-2. 克隆远程仓库到本地 git clone [https://github.com/luggege/book.git](https://github.com/luggege/book.git)
+2. 克隆远程仓库到本地 git clone \([https://github.com/luggege/book.gi](https://github.com/luggege/book.git)t\)
 3. 创建一个新分支：`git checkout -b gh-pages`，注意，分支名必须为 gh-pages
 
 4. 将分支 push 到仓库：`git push -u origin gh-pages`
@@ -51,5 +51,5 @@
 
 之后，每次修改之后，都可以将生成的静态文件 copy 到 book\_build 目录，再 push 到远程仓库 book 的 gh-pages 分支。
 
-参考博客:  \(http://www.jianshu.com/p/4731abc562e7\)
+参考博客:  \([http://www.jianshu.com/p/4731abc562e7\](http://www.jianshu.com/p/4731abc562e7\)\)
 
