--- a/就业指导.md
+++ b/就业指导.md
@@ -12,9 +12,9 @@
 >
 > gh-pages分支\(只能叫这个名字\)用来保存利用生成\(\_book文件夹中\)的静态文件\(html文件/gitbook样式文件\)
 
-### 最终利用GitHub线上预览自己的电子书 \[网址\]\([https://luggege.github.io/book](https://luggege.github.io/book%29\)
+### 最终利用GitHub线上预览自己的电子书 \[网址\][https://luggege.github.io/book](https://luggege.github.io/book%29\)
 
-### 利用gitbook.com线上编辑的电子书,在线预览\[地址\]\([https://luggege.gitbooks.io/book](https://luggege.gitbooks.io/book%29\)
+### 利用gitbook.com线上编辑的电子书,在线预览\[地址\][https://luggege.gitbooks.io/book](https://luggege.gitbooks.io/book%29\)
 
 ## 如何发布到GitHub
 
@@ -26,30 +26,28 @@
 具体操作步骤:
 
 1. 登录GitHub创建一个新仓库,命名为book
-2. 克隆远程仓库到本地 git clone \([https://github.com/luggege/book.gi](https://github.com/luggege/book.git)t\)
-3. 创建一个新分支：`git checkout -b gh-pages`，注意，分支名必须为 gh-pages
+2. 克隆远程仓库到本地 `git clone `[`https://github.com/luggege/book.g`](https://github.com/luggege/book.git)`it`
+3. 将分支 push 到仓库：`git push -u origin gh-pages`
 
-4. 将分支 push 到仓库：`git push -u origin gh-pages`
-
-5. 切换到主分支:`git checkout master`
+4. 切换到主分支:`git checkout master`
 
 经过这一步处理，我们已经创建好 gh-pages 分支了，有了这个分支，GitHub 会自动为你分配一个访问网址：
 
 `http://USERNAME.github.io/book`
 
-1. cd .. 退出一层克隆远程仓库的gh-pages分支并保存为book_build文件夹:   git clone -b gh-pages _[https://github.com/luggege/book.git](https://github.com/luggege/book.git)_ book\_build_
+1. cd .. 退出一层克隆远程仓库的gh-pages分支并保存为book_build文件夹:   `git clone -b gh-pages `_[`https://github.com/luggege/book.git`](https://github.com/luggege/book.git)_` book_build`_
 
 2. 然后从本地编辑器自动生成的源目录中找到_book文件夹\(保存的html静态文件\),复制其中的静态文件和样式文件\(gitbook\)到gitbook\_build文件中_
 
 3. 将静态文件push到远程仓库book的gh-pages分钟上: 命令如下:
 
-> git add .
+> `git add .`
 >
-> git commit -m "add file"
+> `git commit -m "add file"`
 >
-> git push origin gh-pages
+> `git push origin gh-pages`
 
 之后，每次修改之后，都可以将生成的静态文件 copy 到 book\_build 目录，再 push 到远程仓库 book 的 gh-pages 分支。
 
-参考博客:  \([http://www.jianshu.com/p/4731abc562e7\](http://www.jianshu.com/p/4731abc562e7\)\)
+参考博客:  [`http://www.jianshu.com/p/4731abc562e7`](http://www.jianshu.com/p/4731abc562e7%29\)
 
