--- a/就业指导.md
+++ b/就业指导.md
@@ -1,7 +1,7 @@
 ### gitbook editor是本地编辑器
 
-> 关联GitHub方法:  Book==&gt;Repository Settings==&gt;填入GitHub地址\([https://github.com/luggege/book.git\](https://github.com/luggege/book.git%29\)
->
+关联GitHub方法:  Book==&gt;Repository Settings==&gt;填入GitHub地址[https://github.com/luggege/book.git](https://github.com/luggege/book.git%29\)
+
 > 本地代码同步到GitHub上==&gt;save==&gt;Publish&Sync
 
 ### gitbook.com是线上编辑器\(用GitHub账号登录,关联GitHub\)
@@ -26,7 +26,7 @@
 具体操作步骤:
 
 1. 登录GitHub创建一个新仓库,命名为book
-2. 克隆远程仓库到本地 `git clone `[`https://github.com/luggege/book.g`](https://github.com/luggege/book.git)`it`
+2. 克隆远程仓库到本地 `git clone`[`https://github.com/luggege/book.g`](https://github.com/luggege/book.git)`it`
 3. 将分支 push 到仓库：`git push -u origin gh-pages`
 
 4. 切换到主分支:`git checkout master`
@@ -35,7 +35,7 @@
 
 `http://USERNAME.github.io/book`
 
-1. cd .. 退出一层克隆远程仓库的gh-pages分支并保存为book_build文件夹:   `git clone -b gh-pages `_[`https://github.com/luggege/book.git`](https://github.com/luggege/book.git)_` book_build`_
+1. cd .. 退出一层克隆远程仓库的gh-pages分支并保存为book_build文件夹:   _`git clone -b gh-pages`[`https://github.com/luggege/book.git`](https://github.com/luggege/book.git)`book_build`
 
 2. 然后从本地编辑器自动生成的源目录中找到_book文件夹\(保存的html静态文件\),复制其中的静态文件和样式文件\(gitbook\)到gitbook\_build文件中_
 
