--- a/就业指导.md
+++ b/就业指导.md
@@ -26,7 +26,7 @@
 具体操作步骤:
 
 1. 登录GitHub创建一个新仓库,命名为book
-2. 克隆远程仓库到本地 `git clone`[`https://github.com/luggege/book.g`](https://github.com/luggege/book.git)`it`
+2. 克隆远程仓库到本地 `git clonehttps://github.com/luggege/book.git`
 3. 将分支 push 到仓库：`git push -u origin gh-pages`
 
 4. 切换到主分支:`git checkout master`
@@ -35,11 +35,13 @@
 
 `http://USERNAME.github.io/book`
 
-1. cd .. 退出一层克隆远程仓库的gh-pages分支并保存为book_build文件夹:   _`git clone -b gh-pages`[`https://github.com/luggege/book.git`](https://github.com/luggege/book.git)`book_build`
+1. cd .. 退出一层克隆远程仓库的gh-pages分支并保存为book\__build文件夹:   _
 
-2. 然后从本地编辑器自动生成的源目录中找到_book文件夹\(保存的html静态文件\),复制其中的静态文件和样式文件\(gitbook\)到gitbook\_build文件中_
+    `git clone -b gh-pageshttps://github.com/luggege/book.gitbook_build`
 
-3. 将静态文件push到远程仓库book的gh-pages分钟上: 命令如下:
+   2.然后从本地编辑器自动生成的源目录中找到_book文件夹\(保存的html静态文件\),复制其中的静态文件和样式文件\(gitbook\)到   gitbook\_build文件中_
+
+  3.将静态文件push到远程仓库book的gh-pages分钟上: 命令如下:
 
 > `git add .`
 >
@@ -48,6 +50,14 @@
 > `git push origin gh-pages`
 
 之后，每次修改之后，都可以将生成的静态文件 copy 到 book\_build 目录，再 push 到远程仓库 book 的 gh-pages 分支。
+
+之后操作具体步骤:
+
+1. git pull\(相当于git fetch + git merge\) 拉取指定分支,没必要clone
+2. gitbook build \(生成静态页面之后放到book\_build中\)
+3. git add .
+4. git commit -m ''"
+5. git push
 
 参考博客:  [`http://www.jianshu.com/p/4731abc562e7`](http://www.jianshu.com/p/4731abc562e7%29\)
 
