--- a/就业指导.md
+++ b/就业指导.md
@@ -37,11 +37,11 @@
 
 1. cd .. 退出一层克隆远程仓库的gh-pages分支并保存为book\__build文件夹:   _
 
-    `git clone -b gh-pageshttps://github.com/luggege/book.gitbook_build`
+   `git clone -b gh-pageshttps://github.com/luggege/book.gitbook_build`
 
    2.然后从本地编辑器自动生成的源目录中找到_book文件夹\(保存的html静态文件\),复制其中的静态文件和样式文件\(gitbook\)到   gitbook\_build文件中_
 
-  3.将静态文件push到远程仓库book的gh-pages分钟上: 命令如下:
+   3.将静态文件push到远程仓库book的gh-pages分钟上: 命令如下:
 
 > `git add .`
 >
@@ -53,11 +53,13 @@
 
 之后操作具体步骤:
 
-1. git pull\(相当于git fetch + git merge\) 拉取指定分支,没必要clone
-2. gitbook build \(生成静态页面之后放到book\_build中\)
-3. git add .
-4. git commit -m ''"
-5. git push
+> 1. git pull\(相当于git fetch + git merge\) 拉取指定分支,没必要clone
+> 2.gitbook build \(生成静态页面之后放到book\_build中\)
+> 3.git add .
+> 4.git commit -m ''"
+> 5.git push
+
+
 
 参考博客:  [`http://www.jianshu.com/p/4731abc562e7`](http://www.jianshu.com/p/4731abc562e7%29\)
 
