--- a/就业指导.md
+++ b/就业指导.md
@@ -53,7 +53,7 @@
 
 之后操作具体步骤:
 
-> 1.  git pull\(相当于git fetch + git merge\) 拉取指定分支,没必要clone
+> 1. git pull master\(相当于git fetch + git merge\) 拉取指定分支,没必要clone
 >    2.gitbook build \(生成静态页面之后放到book\_build中\)
 >    3.git add .
 >    4.git commit -m ''"
