--- a/就业指导.md
+++ b/就业指导.md
@@ -56,7 +56,7 @@
 > 1.git pull origin master\(相当于git fetch + git merge\) 拉取指定分支,没必要clone  
 > 2.gitbook build \(生成静态页面之后放到book\_build中\)  
 > 3.git add .  
-> 4.git commit -m ''"  
+> 4.git commit -m ''add file"  
 > 5.git push
 
 参考博客:  [`http://www.jianshu.com/p/4731abc562e7`](http://www.jianshu.com/p/4731abc562e7%29\)
