--- a/面试题总结.md
+++ b/面试题总结.md
@@ -13,7 +13,7 @@
 
 ** 工作中用到的问题 \(除兼容性问题,h5 c3适配问题\) **
 
-# 简历
+### 简历
 
 1. 简约而不简单
 
@@ -25,18 +25,16 @@
 
 ### 简历命名规范
 
-陆文秀-Web前端-2年工作经验 157-3592-1660
+陆文秀-Web前端-3年工作经验 176-0104-1032
 
 展现熟悉的,突出最熟悉的
 
-## 对自己技术有什么规划?
+### 之后的一些规划
 
 1. 研究新的流行框架
 2. 往后台发展\(数据库和服务器相关知识\)
 
-```
-用的什么技术, 开发流程, 团队有几个人, 来之后主要负责什么
-```
+
 
 
 
