--- a/就业指导.md
+++ b/就业指导.md
@@ -35,7 +35,7 @@
 
 `http://USERNAME.github.io/book`
 
-1.  cd .. 退出一层克隆远程仓库的gh-pages分支并保存为book\__build文件夹:   _
+1. cd .. 退出一层克隆远程仓库的gh-pages分支并保存为book\__build文件夹:   _
 
    `git clone -b gh-pages https://github.com/luggege/book.gitbook_build`
 
@@ -60,4 +60,25 @@
 > 5.git push
 
 参考博客:  [`http://www.jianshu.com/p/4731abc562e7`](http://www.jianshu.com/p/4731abc562e7%29\)
+
+
+
+#### 如何查看GitHub上有没有本台电脑的ssh keys
+
+* C:\Documents and Settings\Administrator\.ssh\ 目 录下。有没有id\_rsa和id\_rsa.pub两个文件,有的话已经生成过,复制id\_rsa.pub中的内容到GitHub即可
+
+* 没有的话重新生成: git命令行输入 ssh-keygen -t rsa -C "email@email.com" 即可生成.
+
+#### git命令: 全局设置用户名和邮箱
+
+* 查看git配置信息: git config --list
+* 查看git用户名: git config user.name
+
+* 查看邮箱配置: git config user.email
+
+* 全局配置用户名: git config --global user.name "lugegel"
+
+* 全局配置邮箱: git config --global user.email "luwenxiu@legalminer.com"
+
+
 
