--- a/就业指导.md
+++ b/就业指导.md
@@ -54,7 +54,12 @@
 之后操作具体步骤:
 
 > 1.git pull origin master\(相当于git fetch + git merge\) 拉取指定分支,没必要clone  
-> 2.gitbook build \(生成静态页面之后放到book\_build中\)  
+> 2.gitbook build \(生成静态页面之后放到book\_build中\)
+>
+> > 检查gitbook 是否安装\( gitbook -V \); 
+> >
+> > 安装: npm install -g gitbook-cli
+>
 > 3.git add .  
 > 4.git commit -m ''add file"  
 > 5.git push
