--- a/流行框架.md
+++ b/流行框架.md
@@ -1,3 +1,7 @@
-###内置指令
-* ng-include: 可以引入模板(不同于js中的firame标签,不会使全局变量增多)
-> js中disabled是无值属性,通过ng-变成angular形式,可以设置其状态(true和false)
+### 内置指令
+
+* ng-include: 可以引入模板\(不同于js中的firame标签,不会使全局变量增多\)
+  > js中disabled是无值属性,通过ng-变成angular形式,可以设置其状态\(true和false\)
+
+
+
